fixed map & aligned center

--- a/desktop15/desktop15.css
+++ b/desktop15/desktop15.css
@@ -175,6 +175,7 @@ body{
     display: flex;
     flex-direction: row;
     height: 32.5vw;
+    margin-left: 7vw;
 }
 
 .pics_huge{
@@ -204,6 +205,7 @@ body{
 }
 
 .navigation_bar {
+    margin-left: 7vw;
     display: flex;
     flex-direction: column;
 }
@@ -217,6 +219,19 @@ body{
       font-size: 1.5vw;
       font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
       font-style: italic;
+      
+}
+
+.nav_menu > a {
+      text-decoration: none;
+      color: inherit;
+}
+
+.nav_menu > a:hover {
+  transform: scale(1.005);
+  color: green;
+  text-decoration: underline;
+  cursor: pointer;
 }
 
 .map_image {
@@ -226,10 +241,18 @@ body{
     margin: 2vw 0 0 5vw;
 }
 
-.map_image > img{
+.map_image > a > img{
+    /* border: 1px solid grey; */
     position: relative;
     display: inline;
     width: 60vw;
+    box-shadow: 2px 2px 10px grey;
+    transition: 0.35s 0s ease;
+}
+
+.map_image > a > img:hover {
+  transform: scale(1.03);
+  box-shadow: 4px 4px 10px grey;
 }
 
 .highlights_section {
@@ -238,15 +261,18 @@ body{
     position: relative;
     left: 5vw;
     margin-top: 2.5vw;
+    margin-bottom: 4vw;
 }
 
 .highlights {
+    margin-left: 7vw;
     font-family: garamond_italic;
     font-size: 4vw;
     margin-bottom: 0.5vw;
 }
 
 .highlights_tagline {
+    margin-left: 7vw;
     font-family: satoshi_italic;
     font-size: 1.2vw;
 }
